--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>Лабораторные</title>
 </head>
 <body>
-  <a href="6_lab/main.html">Лабораторная ЭВТ №6</a><br>
-  <a href="7_lab/main.html">Лабораторная ЭВТ №7</a><br>
-  <a href="8_lab/main.html">Лабораторная ЭВТ №8</a><br>
-  <a href="9_lab/main.html">Лабораторная ЭВТ №9</a><br>
-  <a href="10_lab/main.html">Лабораторная ЭВТ №10</a><br>
-  <a href="11_lab/main.html">Лабораторная ЭВТ №11</a><br>
-  <a href="12_lab/main.html">Лабораторная ЭВТ №12</a><br>
+  <a href="ЛР5/1.html">Лабораторная ЭВТ №5</a><br>
+  <a href="ЛР6/EVT_lab6/6_lab_EVT.html">Лабораторная ЭВТ №6</a><br>
+  <a href="ЛР7/EVT_lab7/EVT_lab7.html">Лабораторная ЭВТ №7</a><br>
+  <a href="ЛР8/EVT_lab8/EVT_lab8.html">Лабораторная ЭВТ №8</a><br>
+  <a href="ЛР9/EVT_lab9/EVT_lab9.html">Лабораторная ЭВТ №9</a><br>
+  <a href="ЛР10/">Лабораторная ЭВТ №10</a><br>
+  <a href="ЛР11/EVT_lab11/index.html">Лабораторная ЭВТ №11</a><br>
 </body>
 </html>
